fix scrollbar style

--- a/src/components/ChatBot/BotModal.module.css
+++ b/src/components/ChatBot/BotModal.module.css
@@ -42,6 +42,25 @@
 
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 1px 3px lightgray;
+    z-index: 1000;
+}
+
+.bot_modal::-webkit-scrollbar {
+    width: 7px;
+}
+
+.bot_modal::-webkit-scrollbar-thumb {
+    background: gray;
+    border-radius: 100px;
+}
+
+.bot_modal::-webkit-scrollbar-track {
+    overflow: hidden;
+}
+
+
+.bot_modal::-webkit-scrollbar-button {
+    background: transparent;
 }
 
 .hidden {
